// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-md navbar-light bg-light"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Jobly
    </a>
    <div
      class="navbar-collapse justify-content-end"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/companies"
          >
            Companies
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/jobs"
          >
            Jobs
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/profile"
          >
            Profile
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/"
          >
            Log out testfirst
          </a>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-md navbar-light bg-light"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Jobly
    </a>
    <div
      class="navbar-collapse justify-content-end"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/login"
          >
            Login
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/signup"
          >
            Sign Up
          </a>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;
